# sqlmodel-ext

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_zh.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: index.md
docs/.vitepress/: config.mts  en.mts  zh.mts
docs/en/: index.md
docs/explanation/: cached-table.md  crud-pipeline.md  metaclass.md  polymorphic-internals.md  relation-load-checker.md
docs/guide/: cached-table.md  crud.md  field-types.md  index.md  optimistic-lock.md  pagination.md  polymorphic.md  relation-load-checker.md  relation-preload.md
docs/how-to/: cache-queries.md  define-sti-models.md  handle-concurrent-updates.md  index.md  integrate-with-fastapi.md  prevent-missing-greenlet.md  release-connection-during-long-io.md
docs/internals/: cached-table.md  crud.md  index.md  metaclass.md  optimistic-lock.md  polymorphic.md  prerequisites.md  relation-load-checker.md  (+1 more)
tests/: _models.py  test_all_fields_optional_constraints.py  test_annotated_default_factory_inheritance.py  test_array_explicit_field_sa_type.py  test_basic_crud.py  test_cached_table.py  test_crud_extended.py  test_decimal_types.py  test_deferred_index.py  test_enhanced_session.py  test_field_types_misc.py  test_field_types_str_num.py  test_field_types_url_ssrf.py  test_metaclass_extra.py  test_optimistic_lock.py  test_pagination.py  test_pg_dialect_types.py  test_polymorphic_jti.py  test_polymorphic_sti_query.py  test_relation_load_checker.py  test_relation_preload.py  test_relationship_pep604.py  test_smoke_imports.py
(+84 files in other folders)
