[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlmodel-ext"
version = "0.1.0"
description = "Extended SQLModel infrastructure: smart metaclass, async CRUD mixins, polymorphic inheritance, optimistic locking, relation preloading, and reusable field types."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Foxline AI" },
]
keywords = ["sqlmodel", "sqlalchemy", "pydantic", "async", "crud", "orm", "polymorphic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/foxline-ai/sqlmodel-ext"
Repository = "https://github.com/foxline-ai/sqlmodel-ext"
Issues = "https://github.com/foxline-ai/sqlmodel-ext/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlmodel_ext"]
